--- a/Styles/home.css
+++ b/Styles/home.css
@@ -22,7 +22,7 @@
     display: block;
     width: 100%;
     margin: auto;
-    border-radius: 10em;
+    border-radius: 100%;
 }
 
 .home .container-banner h1{
